# django-matryoshka

./: .editorconfig  .gitignore  .yamllint  README.md  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: test.yml
docs/: mkdocs.yml
docs/content/: index.md
matryoshka/: main.py
tests/: test_main.py
